Add immediate results to questions

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 			</div>
 		</div>
 	</div>
+	<div class="collapse results" id="question1results">
+		<div class="collapse awesome" id="question1choice0">
+			You get a couple 1-star reviews from users about Sabrina, but a lot of "thank you"s and 5-star reviews now that Toby is working! 
+		</div>
+		<div class="collapse okay" id="question1choice1">
+			The app is getting a lot of 1-star reviews complaining that Toby still isn't fixed. Hope Casey can resolve that soon!
+		</div>
+	</div>
 
 	<!--Second question-->
 	<div class="collapse" id="question2">
@@ -124,6 +132,14 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class="collapse results" id="question2results">
+		<div class="collapse awesome" id="question2choice0">
+			Wow, your users really wanted to see bunnies! Everyone at the office is talking about how successful it was. How did you know?
+		</div>
+		<div class="collapse awesome" id="question2choice1">
+			Your coworkers are happy with the new birds! The app doesn't see many new users or reviews mentioning the new animals, but people seem to like them.
 		</div>
 	</div>
 
