change option default text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<p>Take a guess at what data you want to look at before you answer her question. Choose carefully, you can only pick one!</p>
 				<h5>What do you want to know?</h5>
 				<select class="form-select" onchange="dataChosen(1)">
-					<option selected>Open this select menu</option>
+					<option selected>Choose your question</option>
 					<option value="1">I want to see how many times users tapped on each pet</option>
 					<option value="2">I want to see how many users tapped on each pet</option>
 					<option value="3">I want to see reviews mentioning each pet</option>
@@ -89,7 +89,7 @@
 				<p>Take a guess at what data you want to look at before you decide. Choose carefully, you can only pick one!</p>
 				<h5>What do you want to know?</h5>
 				<select class="form-select" onchange="dataChosen(2)">
-					<option selected>Open this select menu</option>
+					<option selected>Choose your question</option>
 					<option value="1">I want to see what pets people search for in the app</option>
 					<option value="2">I want to take see what my coworker's favorite animals are</option>
 					<option value="3">I want to see reviews</option>
