--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 </head>
 <body>
 	<!--Header-->
-	You are a data scientist for a wonderful app and you have to make decisions about it based on ~data~
+	<div class="heading">
+		<div class="heading-text">
+			<h1>Welcome, Data Scientist!</h1>
+			<p>You and your friends are making a virtual pet shelter game!</p>
+			<p>It's been pretty successful so far, but there's always work to do. Your job as a Data Scientist is to make sure the team is making the right decisions to keep your users happy.</p>
+		</div>
+		<img class="heading-image" src="pictures/phone.png">
+	</div>
 	<!--First question-->
 	<div class="collapse" id="question1">
 		<div class="card card-body question-section">
