change "try again" to "play again"

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 			<div class="heading-text">
 				<h1>What a Week!</h1>
 				<p id="results"></p>
-				<p>Refresh the page to try again!</p>
+				<p>Refresh the page to play again!</p>
 			</div>
 		</div>
 	</div>
