--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 	<!--Header-->
+	<div class="banner">Want to contribute? <a href="https://github.com/Caseysch2/Data101">See the code here!</a></div>
 	<div class="heading">
 		<div class="heading-text">
 			<h1>Welcome, Data Scientist!</h1>
@@ -371,7 +372,7 @@
 							Word cloud: Reviews mention a lot of dog breeds, pretty evenly weighted. The biggest ones are dog breeds you already have.
 						</div>
 						<div class="collapse" id="question6option3">
-							Word cloud: Searches mention a lot of dog breeds, pretty evenly weighted. The biggest ones are dog breeds you already have. 
+							Word cloud: Searches mention a lot of dog breeds, pretty evenly weighted. The biggest ones are dog breeds you already have.
 						</div>
 					</div>
 					<!-- The choices -->
@@ -417,7 +418,7 @@
 				<p id="results"></p>
 				<p>Refresh the page to play again!</p>
 			</div>
-		</div>
+		</div>		
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
