Add graphs for question 3

--- a/index.html
+++ b/index.html
@@ -164,26 +164,13 @@
 				<h5>What should you find out first?</h5>
 				<select class="form-select" onchange="dataChosen(3)">
 					<option selected>Choose your question</option>
-					<option value="1">How many people install the app on each type of device (android phone, ipad, computer, etc)</option>
-					<option value="2">How many other people at the office see this bug</option>
-					<option value="3">How many reviews mention "ipad" or "bug"</option>
-					<option value="4">How many people in the world use ipads (word this better)</option>
+					<option value="1">How many of our users are on iPads?</option>
+					<option value="2">How many reviews mention "iPad" or "bug"?</option>
+					<option value="3">How many people in the world use iPads?</option>
 				</select>
 				<div class="collapse" id="question3data">
 					<!-- The data -->
 					<div class="data-reveal">
-						<div class="collapse" id="question3option1">
-							Pie chart saying that the PM is, like, the only one on an ipad
-						</div>
-						<div class="collapse" id="question3option2">
-							Table of coworkers where PM is the only one who said 'yes'
-						</div>
-						<div class="collapse" id="question3option3">
-							534 reviews, 100 mention 'bug', 3 mention 'ipad'
-						</div>
-						<div class="collapse" id="question3option4">
-							Some chart saying how many people use ipads (use real data)
-						</div>
 						<canvas id="question3chart" width="400" height="200"></canvas>
 					</div>
 					<!-- The choices -->
