Add graphs to question 5

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 						<canvas id="question3chart" width="300" height="200"></canvas>
 					</div>
 					<!-- The choices -->
-					<h5>How Important Is This Bug?</h5>
+					<h5>How important is this bug?</h5>
 					<div class="options">
 						<div class="card" style="width: 18rem;">
 							<img class="card-img-top" src="https://image.shutterstock.com/image-photo/closeup-business-people-hands-typing-260nw-1861205833.jpg">
@@ -241,7 +241,7 @@
 						<canvas id="question4chart" width="300" height="200"></canvas>
 					</div>
 					<!-- The choices -->
-					<h5>What Do You Think?</h5>
+					<h5>What do you think?</h5>
 					<div class="options">
 						<div class="card" style="width: 18rem;">
 							<img class="card-img-top" src="https://c8.alamy.com/comp/KXC819/smart-four-colleagues-conducting-poll-KXC819.jpg">
@@ -283,36 +283,29 @@
 			<img class="question-image" src="https://previews.123rf.com/images/auremar/auremar1709/auremar170902289/85273220-confident-woman-in-wheelchair-with-her-mobile-phone.jpg">
 			<div class="question-text">
 				<h1>Thursday Afternoon</h1>
-				<p>The marketing expert wants to know when to post because no attention</p>
-				<h5>What do you want to know?</h5>
+				<p>The community manager is trying to figure out how to include more users.</p>
+				<p>They say that the events they run in the game don't seem to attract many people. They're wondering if they're just running events on the wrong days!</p>
+				<p>Can you help?</p>
+				<h5>What do you need to know?</h5>
 				<select class="form-select" onchange="dataChosen(5)">
 					<option selected>Choose your question</option>
-					<option value="1">When reviews are posted</option>
-					<option value="2">When do users use app</option>
-					<option value="3">When people normally post on social media</option>
+					<option value="1">When do your users post reviews?</option>
+					<option value="2">How many people use the app each day?</option>
+					<option value="3">How often do people check their phones each day?</option>
 				</select>
 				<div class="collapse" id="question5data">
 					<!-- The data -->
 					<div class="data-reveal">
-						<div class="collapse" id="question5option1">
-							bar chart of a week showing that reviews are mostly posted on fridays
-						</div>
-						<div class="collapse" id="question5option2">
-							Trend line showing that people use the app a LOT on weekends during the day, not-so-much on week days
-						</div>
-						<div class="collapse" id="question5option3">
-							Some real data chart of when people post to social media
-						</div>
 						<canvas id="question5chart" width="300" height="200"></canvas>
 					</div>
 					<!-- The choices -->
-					<h5>When is the Best Time For Your Users?</h5>
+					<h5>When is the best time for your users to play?</h5>
 					<div class="options">
 						<div class="card" style="width: 18rem;">
 							<img class="card-img-top" src="https://image.shutterstock.com/image-photo/tranquil-beach-scene-exotic-tropical-260nw-644740495.jpg">
 							<div class="card-body">
 								<h5 class="card-title">Weekend</h5>
-								<p class="card-text">You tell her to schedule the post for this weekend</p>
+								<p class="card-text">You tell them to schedule more events on the weekends.</p>
 								<button type="button" class="btn btn-primary" onclick="optionChosen(5, 0)">
 									Choose this Option
 								</button>
@@ -322,7 +315,7 @@
 							<img class="card-img-top" src="https://image.shutterstock.com/image-photo/people-waiting-train-subway-station-260nw-695631085.jpg">
 							<div class="card-body">
 								<h5 class="card-title">Weekday</h5>
-								<p class="card-text">You tell her to schedule the post on a weekday</p>
+								<p class="card-text">You tell them to schedule more events on weekdays.</p>
 								<button type="button" class="btn btn-primary" onclick="optionChosen(5, 1)">
 									Choose this Option
 								</button>
@@ -335,10 +328,10 @@
 	</div>
 	<div class="collapse results" id="question5results">
 		<div class="collapse awesome" id="question5choice0">
-			There were a ton of responses to the post!
+			The marketing expert says they'll try that out!
 		</div>
 		<div class="collapse okay" id="question5choice1">
-			There weren't many responses to the post. The marketing expert is disappointed.
+			The marketing expert says that's what they've been doing, but they'll keep trying.
 		</div>
 	</div>
 
@@ -371,7 +364,7 @@
 						<canvas id="question6chart" width="300" height="200"></canvas>
 					</div>
 					<!-- The choices -->
-					<h5>What Dog Would Your Users Like Best?</h5>
+					<h5>What dog would your users like best?</h5>
 					<div class="options">
 						<div class="card" style="width: 18rem;">
 							<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Golden_Retriever_Carlos_%2810581910556%29.jpg/1200px-Golden_Retriever_Carlos_%2810581910556%29.jpg">
