--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 			The bug gets fixed, and the project manager is really happy about it!
 		</div>
 		<div class="collapse awesome" id="question3choice1">
-			The programmer completed the other feature she was working on, and the users loved it!
+			The programmer completed the other feature she was already working on, and the users loved it!
 		</div>
 	</div>
 
