Add pictures for question 3

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 					<h5>How important is this bug?</h5>
 					<div class="options">
 						<div class="card" style="width: 18rem;">
-							<img class="card-img-top" src="https://image.shutterstock.com/image-photo/closeup-business-people-hands-typing-260nw-1861205833.jpg">
+							<img class="card-img-top" src="pictures\answers\3-1.svg">
 							<div class="card-body">
 								<h5 class="card-title">Really Important!</h5>
 								<p class="card-text">You should tell the programmer to fix this right away!</p>
@@ -192,7 +192,7 @@
 							</div>
 						</div>
 						<div class="card" style="width: 18rem;">
-							<img class="card-img-top" src="https://st3.depositphotos.com/1441511/17615/i/1600/depositphotos_176154214-stock-photo-worker-relaxing-in-office-relaxed.jpg">
+							<img class="card-img-top" src="pictures\answers\3-2.svg">
 							<div class="card-body">
 								<h5 class="card-title">Not So Important</h5>
 								<p class="card-text">You should tell the programmer to get to this when she can.</p>
