--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 					<h5>What do you think?</h5>
 					<div class="options">
 						<div class="card" style="width: 18rem;">
-							<img class="card-img-top" src="https://c8.alamy.com/comp/KXC819/smart-four-colleagues-conducting-poll-KXC819.jpg">
+							<img class="card-img-top" src="pictures\answers\4-1.svg">
 							<div class="card-body">
 								<h5 class="card-title">Trust the Poll</h5>
 								<p class="card-text">Tell him that the poll is probably accurate. You should respect the theme that the users chose!</p>
@@ -259,7 +259,7 @@
 							</div>
 						</div>
 						<div class="card" style="width: 18rem;">
-							<img class="card-img-top" src="https://st2.depositphotos.com/1003713/10307/i/950/depositphotos_103079474-stock-photo-disappointed-young-business-man-with.jpg">
+							<img class="card-img-top" src="pictures\answers\4-2.svg">
 							<div class="card-body">
 								<h5 class="card-title">Don't Trust the Poll</h5>
 								<p class="card-text">Tell him that there was definitely cheating going on, and he should figure out a different way of deciding on the next theme.</p>
