--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				<h5>What do you want to know?</h5>
 				<select class="form-select" onchange="dataChosen(4)">
 					<option selected>Choose your question</option>
-					<option value="1">Do the age range of our users look the same as the age range of the poll responders?</option>
+					<option value="1">Does the age range of our users look the same as the age range of the poll responders?</option>
 					<option value="2">Do the locations of our users look the same as the locations of the poll responders?</option>
 					<option value="3">When did people respond to the poll?</option>
 				</select>
