--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div>
 			Want to contribute? <a href="https://github.com/Caseysch2/Data101">See the code here!</a>
 		</div>
-		<a href="http://www.freepik.com">All images designed by pch.vector / Freepik</a>
+		<a href="http://www.freepik.com">Images designed by pch.vector / Freepik</a>
 	</div>
 	<div class="heading">
 		<div class="heading-text">
