Add a link to buymeacoffee

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!--Header-->
 	<div class="banner">
 		<div>
-			Want to contribute? <a href="https://github.com/Caseysch2/Data101">See the code here!</a>
+			Want to contribute? <a href="https://github.com/Caseysch2/Data101">See the code</a> or <a href="https://www.buymeacoffee.com/CSCH">buy me a coffee</a>.
 		</div>
 		<a href="http://www.freepik.com">Images designed by pch.vector / Freepik</a>
 	</div>
